--- a/src/components/WaveBackground/WaveBackground.css
+++ b/src/components/WaveBackground/WaveBackground.css
@@ -6,8 +6,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: -1;
   pointer-events: none;
   user-select: none;
